Fix horizontal scroll on case study page when scrolling down

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,7 +1,3 @@
-html, body {
-  overflow-x: hidden;
-}
-
 .round-logo {
   filter: invert(24%) sepia(8%) saturate(867%) hue-rotate(197deg) brightness(89%) contrast(86%);
 }
@@ -122,7 +118,7 @@ html, body {
   .logo-container {
     position: absolute;
     top: -117px;
-    right: 0;
+    right: 40px;
   }
 }
 
